--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 html,body, #root{
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
-*{
+*, *::after, *::before{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,7 +12,5 @@ html,body, #root{
 
 body {
   font-family:sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
