--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,13 +1,38 @@
+.landing{
+    height: 100%;
+    width: 100%;
+}
+
 .header_outer{
     background-color: gray;
-    font-size: root(--ff1);
     min-height: 5rem;
     height: 2%;
     width: 100%;
     position:relative;
 }
 
-.landing{
-    height: 100%;
+.inputarea{
+    display: flex;
+    height: fit-content;
+}
+
+
+
+
+.r1{
+    display:flex;
+    flex-direction: row;
     width: 100%;
+    height: 50%;
+}
+
+.r1 input{
+    height: 2rem;
+}
+
+.r2{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
 }
