--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -17,26 +17,48 @@
 }
 
 
-
-
-.r1{
-    display:flex;
-    flex-direction: row;
-    width: 100%;
-    height: 50%;
+.reeltitle{
+    font-size: 2rem;
+    font-weight: bold;
+    color: green;
+    margin-top: .5rem;
+    text-align: center;
 }
 
-.r1 input{
-    height: 2rem;
-}
-
-.r2{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 50%;
-}
 
 .center {
-text-align: center;
+    text-align: center;
+}
+
+.newsreel{
+    width: 100%;
+    height: 100%;
+}
+
+.topheadlines{
+    width: 100%;
+}
+
+
+.sections{
+    display: inline-block;
+    flex-direction: row;
+    width: fit-content;
+    
+   
+}
+
+.sections button{
+    display: inline-block;
+    border-radius: 5px;
+}
+
+.mainpage{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin: .5rem 0;
+    
 }
