--- a/src/components/NewsReel/NewsReel.css
+++ b/src/components/NewsReel/NewsReel.css
@@ -52,19 +52,26 @@
     flex-direction: column;
 }
 
+.dataentry *{
+    margin: .5rem .5rem;
+    font-weight: bold;
+}
+
 .data_source{
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 50%;
-    padding: .5rem .5rem;
     
 }
+
+
+.data
 
 .data_desc{
     width: 100%;
     height: 100%;
-    padding: .5rem .5rem;
+    
 }
 
 .data_url{
