--- a/src/components/SigninPage/SigninPage.css
+++ b/src/components/SigninPage/SigninPage.css
@@ -1,39 +1,36 @@
-.signin{
+.signin {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
-}
-
-.left-section{
+  }
+  
+  .left-section {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
-    margin-top: 10rem;
-}
-
-.innerform{
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .innerform {
     width: 100%;
     height: 100%;
-    
-}
-
-.form {
+  }
+  
+  .form {
     display: flex;
     flex-direction: column;
     height: 50%;
     width: 10%;
     width: fit-content;
     font-size: 2rem;
-    
-
-}
-.form h1{
+  }
+  .form h1 {
     margin-left: 20px;
-}
-
-.form input {
+  }
+  
+  .form input {
     min-width: 400px;
     display: block;
     margin: 20px;
@@ -44,47 +41,60 @@
     outline: none;
     box-shadow: 15px 15px 25px #a8a8a8;
     transition: box-shadow 0s;
-}
-
-.form label{
+  }
+  
+  .form label {
     margin: 20px;
-}
-
-.form input:focus {
+  }
+  
+  .form input:focus {
     box-shadow: 5px 5px 15px #a8a8a8;
-}
-
-.form .btn {
-    margin: 20px;
-    background-color: #f1a566;
-    height: 3rem;
-    color: #fff;
+  }
+  
+  .form .loginbtn {
+    padding: 12px 10px;
+    background-color: #6eddbc;
+    border-radius: 7px;
     border: none;
-    font-size: 1.5rem;
-    border-radius: 10px;
+    color: #fff;
+    width: 92%;
     box-shadow: 15px 15px 20px #a8a8a8;
     transition: box-shadow 0.5s;
     outline: none;
-    
-}
-
-.form .btn:hover {
+    font-size: 1.2rem;
+  }
+  .form .loginbtnContainer {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .form .btn:hover {
     box-shadow: 5px 5px 15px #aaa;
     color: white;
     background-color: black;
-}
-
-
-
-.navbtns{
+  }
+  
+  .navbtns {
     display: flex;
     flex-direction: row;
-    
-    
-}
-
-.navbtns :not(:first-child){
-    margin-left:1rem;
-}
-
-
+    width: 100%;
+    justify-content: center;
+  }
+  .signuptxtcontainer .signuplink {
+    color: blue;
+    cursor: pointer;
+  }
+  .signuptxtcontainer .mainpage {
+    color: blue;
+    cursor: pointer;
+  }
+  .navbtns .signuptxtcontainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 1.2rem;
+    padding-top: 1.5rem;
+  }
+  .navbtns :not(:first-child) {
+    margin-left: 1rem;
+  }
