--- a/src/components/SignupPage/SignupPage.css
+++ b/src/components/SignupPage/SignupPage.css
@@ -1,49 +1,47 @@
-.signup{
+.signup {
     font-family: 'Segoe UI';
     font-size: 1.5rem;
     width: 100%;
-    height: 100%;  
+    height: 100%;
     box-sizing: border-box;
-}
-
-.innerform{
+  }
+  
+  .innerform {
     width: 100%;
     height: 100%;
-}
-
-.right-section{
+  }
+  
+  .right-section {
     width: 100%;
     height: 100%;
-    
     display: flex;
-    justify-content: center;
-    
-    margin-top: 10rem;
-}
-
-.pass_err_div{
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .pass_err_div {
     display: flex;
     flex-direction: column;
-}
-
-.form {
+  }
+  
+  .form {
     display: flex;
     flex-direction: column;
     height: 50%;
     width: 10%;
     width: fit-content;
     font-size: 2rem;
-}
-
-.form label{
+  }
+  
+  .form label {
     font-size: 1.5rem;
-}
-
-.form h1{
+  }
+  
+  .form h1 {
     margin-left: 20px;
-}
-
-.form input {
+  }
+  
+  .form input {
     min-width: 400px;
     display: block;
     margin: 20px;
@@ -54,15 +52,15 @@
     outline: none;
     box-shadow: 15px 15px 25px #a8a8a8;
     transition: box-shadow 0s;
-}
-
-.form input:focus {
+  }
+  
+  .form input:focus {
     box-shadow: 5px 5px 15px #a8a8a8;
-}
-
-.form .btn {
+  }
+  
+  .form .btn {
     margin: 20px;
-    background-color: #f1a566;
+    background-color: #6eddbc;
     height: 3rem;
     color: #fff;
     border: none;
@@ -71,38 +69,39 @@
     box-shadow: 15px 15px 20px #a8a8a8;
     transition: box-shadow 0.5s;
     outline: none;
-    
-}
-
-.form .btn:hover {
+  }
+  
+  .form .btn:hover {
     box-shadow: 5px 5px 15px #aaa;
-}
-
-
-
-.navbtns{
+  }
+  
+  .navbtns {
     display: flex;
     flex-direction: row;
-}
-
-.navbtns :not(:first-child){
-    margin-left:1rem;
-}
-
-.btn{
+  }
+  
+  .navbtns :not(:first-child) {
+    margin-left: 1rem;
+  }
+  
+  .btn {
     width: 100%;
     height: 100%;
-}
-
-.confirm_div{
+  }
+  
+  .confirm_div {
     display: flex;
     flex-direction: column;
-
-}
-
-
-.usercreate{
+  }
+  
+  .navbtns .signuptxtcontainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 1.2rem;
+    padding-top: 15px;
+  }
+  .usercreate {
     border-radius: 5px;
     padding: 2rem;
-    
-}
+  }
