--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -20,7 +20,8 @@
 .reeltitle{
     font-size: 2rem;
     font-weight: bold;
-    color: green;
+    font-family: Helvetica;
+    color: #02908b;
     margin-top: .5rem;
     text-align: center;
 }
@@ -44,26 +45,37 @@
     display: inline-block;
     flex-direction: row;
     width: fit-content;
-    
-   
 }
 
 .sections button{
     display: inline-block;
+    height: 100px;
     border-radius: 5px;
 }
 
 .mainpage{
-    
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
     margin: .5rem 0;
-    
+
 }
 
 .newslinkouter{
     width: 100%;
     height: 3rem;
+}
+
+.refresh{
+    margin-top: 20px;
+    background-color: #02908b;
+    color: white;
+    padding: 10px 20px;
+    font-family: Arial;
+    text-align: center;
+    display: inline-block;
+    font-size: 15px;
+    border-radius: 12px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
