--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -28,12 +28,13 @@
     height: 100%;
 
     vertical-align: middle;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    background-color:blue;
 }
 
 .sett_choice input[type="checkbox"]{
-    width: 25px;
-    height: 50px;
+    width: 25%;
+    height: 90%;
 }
 
 .sett_title{
