--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -85,3 +85,33 @@
     margin-top: 20px;
     
 }
+
+
+.inputsearch{
+    margin-top: 5px;
+    display: flex;
+    flex-direction: row;
+    height: 3rem;
+    width: 25%;
+    border: 2px solid black;
+}
+
+.inputsearch input{
+    width: 75%;
+    height: 100%;
+    padding-left: 5px;
+}
+
+.inputsearch button{
+    width: 25%;
+    height: 100;
+    background-color: white;
+    border: none;
+    
+}
+
+.inputsearch button:hover{
+    background-color: black;
+    color: white;
+    
+}
